extrator de json de serviçoes 1.0

--- a/dashboard_auditoria.html
+++ b/dashboard_auditoria.html
@@ -506,7 +506,7 @@
                         <div class="subtitle">Não encontradas</div>
                     </div>
                     <div class="stat-card">
-                        <h3>⚠️ OS Sem Nota Fiscal</h3>
+                        <h3>⚠️ OS Sem NFSe</h3>
                         <div class="value">${resumo.nfse.os_sem_nota || 0}</div>
                         <div class="subtitle">OS encerradas sem NF</div>
                     </div>
